<resources>
    <string name="app_name">CoronaWatch</string>
    <string name="user">بياناتك</string>
    <string name="health">صحة</string>
    <string name="map">الخريطة</string>
    <string name="info">ابلاغْ</string>
    <string name="home">الرئيسية</string>
    <string name="notifications">الإشعارات</string>
    <string name="settings">الإعدادات</string>
    <string name="help">المساعدة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="user_name">المستخدم 2020</string>
    <string name="user_name_view">اسم المستخدم</string>
    <string name="name_view">الاسم</string>
    <string name="name">مستخدم</string>
    <string name="naissance_view">تاريخ الميلاد</string>
    <string name="date_naissance">01/08/1998</string>
    <string name="password">كلمة السر</string>
    <string name="confirm_password">تاكيد كلمة السر</string>
    <string name="souvegader">حفظ</string>
    <string name="title">اضف عنوانا</string>
    <string name="description">أضف وصفا</string>
    <string name="comment">تعليق</string>
    <string name="add_video">اضف فيديو</string>
    <string name="share">شارك</string>
    <string name="add_comment">اضف تعليقا…</string>
    <string name="videos">فيديوهات</string>
    <string name="news">الأخبار</string>
    <string name="novelties">المستجدات</string>
    <string name="first_image">first image</string>
    <string name="userName">اسم المستخدم</string>
    <string name="second_name">اللقب</string>
    <string name="email">البريد الالكتروني</string>
    <string name="tel">رقم الهاتف</string>
    <string name="chooseOption">ماذا تريد ان تختار</string>
    <string name="update">تعديل</string>
    <string name="delete">حذف</string>
    <string name="pending">قيد الانتظار</string>
    <string name="accepted">مقبول</string>
    <string name="rejected">مرفوض</string>
    <string name="title_activity_maps">Map</string>
    <string name="deaths">الوفاة</string>
    <string name="recovered">الشفاء</string>
        <string name="sick">حالة خطيرة</string>
    <string name="infected">الإصابة</string>
    <string name="confirm">تأكيد</string>
    <string name="international">دوليا</string>
    <string name="national">وطنيا</string>
    <string name="popup_menu">popup_menu</string>
    <string name="photo">صورة</string>
    <string name="video">فيديو</string>
    <string name="camera">كاميرا</string>
    <string name="add_photo">أضف من صورك</string>
    <string name="report">بَلِّغْ</string>
    <string name="add_video_gallery">أضف من فيديوهاتك</string>
    <string name="open_camera">التقط صورة او صور فيديو</string>
    <string name="take_picture">التقاط صورة</string>
    <string name="take_video">تصوير فيديو</string>
    <string name="diagnose">شخّص حالتك</string>
    <string name="results">نتائج الفحص</string>
    <string name="body_temperature">حرارة الجسم</string>
    <string name="heart_beat">نبض القلب</string>
    <string name="weight">الوزن</string>
    <string name="diagnose_button">شخّص</string>
    <string name="take_photo_camera">التقط صورة</string>
    <string name="facebook_app_id">2556537747946372</string>
    <string name="login">تسجيل الدخول</string>
    <string name="register">التسجيل</string>
    <string name="agree">اوافق على</string>
    <string name="term_conditions">شروط الاستخدام</string>
    <string name="forgot_pw">نسيت كلمة السر⸮</string>
    <string name="ask_login">هل تريد تسجيل الدخول⸮</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="fb_login_protocol_scheme">fb2556537747946372</string>
    <string name="comments">التعليقات</string>
    <string name="replies">6 ردود</string>
    <string name="reply">رد</string>
    <string name="add_reply">اضف رد</string>
    <string name="delete_comment">حذف التعليق</string>
    <string name="ask_continue">هل تريد المتابعة ⸮</string>


</resources>
