<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="solutus.coronawatch.ui.mainActivity.user.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

    <TextView
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/fontColor" />

    <EditText
        android:id="@+id/email"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_small_top_margin"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_big_top_margin"
        android:text="@string/name_view"
        android:textColor="@color/fontColor" />

    <EditText
        android:id="@+id/firstName"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_small_top_margin"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_big_top_margin"
        android:text="@string/second_name"
        android:textColor="@color/fontColor" />

    <EditText
        android:id="@+id/lastName"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_small_top_margin"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/date_naissance_view"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_big_top_margin"
        android:text="@string/naissance_view"
        android:textColor="@color/fontColor" />

    <EditText
        android:id="@+id/date_naissance"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_small_top_margin"
        android:drawableEnd="@mipmap/ic_calander"
        android:ems="10"
        android:focusableInTouchMode="false" />


    <TextView
        android:id="@+id/password_view"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_big_top_margin"
        android:text="@string/password"
        android:textColor="@color/fontColor" />

    <EditText
        android:id="@+id/password"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_small_top_margin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/confirm_password_view"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_big_top_margin"
        android:text="@string/confirm_password"
        android:textColor="@color/fontColor" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_small_top_margin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/souvegarder_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/souvegader"
        />

</LinearLayout>
</ScrollView>
