<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:id="@+id/register_fragment"
    tools:context="solutus.coronawatch.ui.loginActivity.register.RegisterFragment">


    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="لا توجد أنترنت"
            android:textColor="@color/colorPrimary"
            android:textSize="21dp"
            android:visibility="gone" />

    </RelativeLayout>

    <EditText
        android:id="@+id/email"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/first_name"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_background"
        android:ems="10"
        android:hint="@string/name_view"
        android:inputType="textPersonName"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/second_name"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_background"
        android:ems="10"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/password"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/confirm_password"
        style="@style/ProfileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/conditions_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_conditions"
            android:autoLink="web"
            android:layout_marginEnd="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textColor="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <CheckBox
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_register"/>


</LinearLayout>
