<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comment_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:cropToPadding="true"
            android:src="@drawable/ic_launcher_background" />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_toStartOf="@id/user_avatar"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="Ourdjini "
            android:textColor="#000000" />

        <TextView
            android:id="@+id/date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@id/user_name"
            android:text="2020-07-04 10:30"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/comment_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_marginStart="8dp"
            android:text="ui ui uiiiiu "
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/user_avatar"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/show_replies_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_view"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/user_avatar"
            android:text="@string/replies"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/reply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_view"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/show_replies_button"
            android:text="@string/reply"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_view"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/reply_button"
            android:text="@string/delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/send_reply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_replies_button"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layoutDirection="rtl"
            android:paddingStart="12dp"
            android:paddingTop="5dp"
            android:paddingEnd="12dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_send"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_replies_button"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@id/user_avatar"
            android:layout_toEndOf="@+id/send_reply_button"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/add_reply"
            android:inputType="textShortMessage"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_replies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/edit_reply"
            android:visibility="gone"
            tools:listitem="@layout/reply_item" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>