<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="solutus.coronawatch.ui.mainActivity.user.addVideo.AddVideoFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_layout"
        android:padding="15dp"
        tools:layout_editor_absoluteX="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frame_view"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordered_background">

                <RelativeLayout
                    android:id="@+id/add_video_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/add_video_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/add_video_view"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        app:srcCompat="@drawable/ic_cloud_upload_black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/add_video_view"
                        app:srcCompat="@drawable/ic_video_library_black" />

                    <TextView
                        android:id="@+id/add_video_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="5dp"
                        android:text="@string/add_video_gallery"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/fontColor" />

                </RelativeLayout>

                <solutus.coronawatch.service.CustomVideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />
            </FrameLayout>

            <EditText
                android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frame_view"
                android:layout_marginBottom="10dp"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:maxLines="1" />

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_edit"
                android:layout_marginBottom="10dp"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:maxLines="1" />

            <Button
                android:id="@+id/share_button"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_edit"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="48dp"
                android:background="@drawable/circular_background"
                android:text="@string/report" />


        </RelativeLayout>

        <FrameLayout
            android:id="@+id/replace_video_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/replace_video_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/ic_autorenew" />

        </FrameLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/uploadProgressBar"
        android:visibility="gone"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
